--- a/css/game.css
+++ b/css/game.css
@@ -1,10 +1,11 @@
-.background    { background: rgb(52, 166, 251);
+.background    { background: rgb(102, 153, 102);
                  table-layout: fixed;
                  border-spacing: 0;   }
 .background td { padding: 0;          }
-.lava          { background: rgb(255, 100, 100); }
-.wall          { background: white;   }
+.lava          { background: rgb(255, 204, 0); }
+.wall          { background: rgb(51, 51, 51);   }
 
+.floater  {background: rgb(153, 51, 102);}
 .game {
   position: relative;
 }
