--- a/css/game.css
+++ b/css/game.css
@@ -6,6 +6,13 @@
 .wall          { background: rgb(51, 51, 51);   }
 
 .floater  {background: rgb(153, 51, 102);}
+
+.actor  { position: absolute;  }
+.player { background: rgb(64, 64, 64); }
+
 .game {
+  overflow: hidden;
+  max-width: 600px;
+  max-height: 450px;
   position: relative;
 }
